--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -5,7 +5,7 @@
 /**
  * @version $Id: debugger.html,v 1.15 2008/06/01 21:25:16 ggiunta Exp $
  * @author Gaetano Giunta
- * @copyright (c) 2008 G. Giunta
+ * @copyright (c) 2008-2009 G. Giunta
  * @license code licensed under the BSD License: http://phpxmlrpc.sourceforge.net/jsxmlrpc/license.txt
  *
  * @todo add links to documentation from every option caption
