- fix links to lib dir for loading jss
git-svn-id: https://svn.code.sf.net/p/phpxmlrpc/code/trunk/javascript@80 013ecfd8-0664-425d-a759-9c98391dc3f9

--- a/debugger/visualeditor.html
+++ b/debugger/visualeditor.html
@@ -77,8 +77,8 @@ else
 <link rel="stylesheet" type="text/css" href="container.css" />
 
 <!-- xmlrpc/jsonrpc base library -->
-<script type="text/javascript" src="xmlrpc_lib.js"></script>
-<script type="text/javascript" src="jsonrpc_lib.js"></script>
+<script type="text/javascript" src="../lib/xmlrpc_lib.js"></script>
+<script type="text/javascript" src="../lib/jsonrpc_lib.js"></script>
 <!-- display components -->
 <script type="text/javascript" src="xmlrpc_display.js"></script>
 <link rel="stylesheet" type="text/css" href="xmlrpc_tree.css" />
