Fix link to github repo

--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@ The homepage for the library has been uploaded on SourceForge, as well as a demo
 You can use the debugger to e.g. query the SF demo server (located at the address <b>http://phpxmlrpc.sourceforge.net/server.php</b>), or debug your own personal xmlrpc server, if it is accessible on the net.</p>
 
 <h2><a name="development">Development</a></h2>
-<p><a href="http://gggeek.github.io/jsxmlrpc/">GitHub home page</a> (downloads, source code and bug tracker).</p>
+<p><a href="https://github.com/gggeek/jsxmlrpc/">GitHub home page</a> (downloads, source code and bug tracker).</p>
 
 <h2><a name="contact">Contact</a></h2>
 <!-- See the lib's <a href="http://sourceforge.net/projects/phpxmlrpc/">SourceForge home page</a> for the complete list of maintainers, file a bug report, feature request or patch.<br/> -->
