Welcome 2020; add .editorconfig; add .gitattributes

--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -4,8 +4,8 @@
 <!--
 /**
  * @author Gaetano Giunta
- * @copyright (c) 2008-2013 G. Giunta
- * @license code licensed under the BSD License: http://phpxmlrpc.sourceforge.net/jsxmlrpc/license.txt
+ * @copyright (c) 2008-2020 G. Giunta
+ * @license code licensed under the BSD License: see LICENSE file
  *
  * @todo add links to documentation from every option caption
  * @todo switch params for http compression from 0,1,2 to values to be used directly
@@ -622,7 +622,7 @@ td {vertical-align: top; font-family: Verdana, Arial, Helvetica; font-size: 8pt;
 
 <div id="controller">
 <h1>XMLRPC <form name="frmxmlrpc" style="display: inline;" action="."><input name="yes" type="radio" onclick="switchtransport(0);"/></form>
-/<form name="frmjsonrpc" style="display: inline;" action="."><input name="yes" type="radio" onclick="switchtransport(1);"/></form>JSONRPC Debugger (based on the <a href="http://phpxmlrpc.sourceforge.net/jsxmlrpc/">JS-XMLRPC</a> library)</h1>
+/<form name="frmjsonrpc" style="display: inline;" action="."><input name="yes" type="radio" onclick="switchtransport(1);"/></form>JSONRPC Debugger (based on the <a href="https://gggeek.github.io/jsxmlrpc/">JS-XMLRPC</a> library)</h1>
 <noscript>
 WARNING: this page is completely useless without javascript support.<br />Please use a javascript-enabled browser
 </noscript>
