fix issues with debugger; copyright 2022; typos in comments

--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -4,7 +4,7 @@
 <!--
 /**
  * @author Gaetano Giunta
- * @copyright (c) 2008-2020 G. Giunta
+ * @copyright (c) 2008-2022 G. Giunta
  * @license code licensed under the BSD License: see LICENSE file
  *
  * @todo add links to documentation from every option caption
@@ -48,9 +48,9 @@
   var alt_payload = '';
 </script>
 <!-- xmlrpc/jsonrpc base library -->
-<script type="text/javascript" src="xmlrpc_lib.js"></script>
-<script type="text/javascript" src="jsonrpc_lib.js"></script>
-<script type="text/javascript" src="xmlrpc_wrappers.js"></script>
+<script type="text/javascript" src="../lib/xmlrpc_lib.js"></script>
+<script type="text/javascript" src="../lib/jsonrpc_lib.js"></script>
+<script type="text/javascript" src="../lib/xmlrpc_wrappers.js"></script>
 
 <style type="text/css">
 <!--
