--- a/debugger/visualeditor.html
+++ b/debugger/visualeditor.html
@@ -1,12 +1,12 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
+    <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN"
     "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<html xmlns="http://www.w3.org/1999/xhtml" lang="en">
 <head>
 <title>XMLRPC Debugger Visual Editor</title>
 <!--
  * Dialog for visually editing trees of json/xmlrpc values
  * @author Gaetano Giunta
- * @copyright (c) 2007-2020 G. Giunta
+ * @copyright (c) 2007-2022 G. Giunta
  * @license code licensed under the BSD License: see LICENSE file
  *
  * @todo do not set to "null" new nodes
@@ -224,8 +224,12 @@ function preview()
 function done()
 {
   out = base64_encode(buildthem());
-  if (window.opener && window.opener.buildparams)
-    window.opener.buildparams(out);
+  try {
+    if (window.opener && window.opener.buildparams)
+      window.opener.buildparams(out);
+  } catch (error) {
+    alert('Error submitting parameters back: ' + error);
+  }
   window.close();
 }
 //-->
