--- a/index.html
+++ b/index.html
@@ -22,12 +22,12 @@
 <h2>Introduction</h2>
 <p>Welcome to the "JS-XMLRPC (XML-RPC for Javascript)" Homepage. It is a library implementing the <a href="http://www.xmlrpc.com/">XML-RPC</a> and <a href="http://json-rpc.org">JSON-RPC</a> protocols, written in Javascript.<br/>
 It is designed for ease of use, flexibility and completeness.<br/>
-Above all, it mimics as closely as possible the API of the <a href="http://gggeek.github.io/phpxmlrpc/">PHPXMLRPC</a> library.<br/><br/>
+Above all, it mimics as closely as possible the API of the <a href="https://gggeek.github.io/phpxmlrpc/">PHPXMLRPC</a> library.<br/><br/>
 <b>Please note</b> that there is another, older javascript library named JSXMLRPC available on sf.net: <a href="http://sourceforge.net/projects/jsxmlrpc">http://sourceforge.net/projects/jsxmlrpc</a>. Both libraries share the same intents, but the code is completely unrelated (at least for now).
 </p>
 
 <h2><a name="download">Download</a></h2>
-Release 0.4 of php-xmlrpc sister-library <a href="https://github.com/gggeek/jsxmlrpc/releases/tag/0.4.0">is available here</a>.<br/>
+Release 0.5 of php-xmlrpc sister-library <a href="https://github.com/gggeek/jsxmlrpc/releases/tag/0.5.0">is available here</a>.<br/>
 Please consider it is still marked as beta code when downloading and using it - even though all known reproducible bugs have been fixed.
 <!--
 <p>The latest stable release is version <a href="http://sourceforge.net/project/showfiles.php?group_id=34455&amp;package_id=26601&amp;release_id=443018"><span class="evidence">2.1</span></a> released on August 28, 2006</p>
@@ -43,18 +43,23 @@ More info on the vulnerabilities can be found <a href="#security">at the bottom 
 <ul>
 
 <li>
+    29th of December, 2022<br/>
+    Version 0.4 of the library has been released<br/><br/>
+</li>
+
+<li>
     15th of December, 2013<br/>
     The project moved to GitHub<br/><br/>
 </li>
 
 <li>
 5th of September, 2009.<br/>
-Version 0.4 of the library <a href="">has been released</a>. It is a bugfix release that solves many errors in all areas of encoding and decoding values. All users are encouraged to upgrade.<br/><br/>
+Version 0.4 of the library has been released. It is a bugfix release that solves many errors in all areas of encoding and decoding values. All users are encouraged to upgrade.<br/><br/>
 </li>
 
 <li>
 26th of June, 2007.<br/>
-Version 0.3 of the library <a href="">has been released</a>. It is a bugfix release that solves many errors in all areas of encoding and decoding values. All users are encouraged to upgrade.<br/><br/>
+Version 0.3 of the library has been released. It is a bugfix release that solves many errors in all areas of encoding and decoding values. All users are encouraged to upgrade.<br/><br/>
 </li>
 
 <li>
@@ -98,7 +103,7 @@ The homepage for the library has been uploaded on SourceForge, as well as a demo
 </ul>
 
 <h2><a name="debugger">Online xmlrpc debugger</a></h2>
-<p>A demo debugger application, built on top of this library, is active at the address <a href="debugger/debugger.html">http://gggeek.github.io/jsxmlrpc/debugger/debugger.html</a>.
+<p>A demo debugger application, built on top of this library, is active at the address <a href="debugger/debugger.html">https://gggeek.github.io/jsxmlrpc/debugger/debugger.html</a>.
 You can use the debugger to e.g. query the SF demo server (located at the address <b>http://phpxmlrpc.sourceforge.net/server.php</b>), or debug your own personal xmlrpc server, if it is accessible on the net.</p>
 
 <h2><a name="development">Development</a></h2>
@@ -132,7 +137,7 @@ For security related issues feel free to contact <a href="http://sourceforge.net
 <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fgggeek.github.com%2Fjsxmlrpc%2F"><img
         src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88"
         alt="Valid XHTML 1.0!" /></a><br/>
-Page last updated: 2014/1/18
+Page last updated: 2022/11/30
 
 </div>
 </body>
