--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -20,6 +20,7 @@
 -->
 <head>
 <title>XMLRPC Debugger</title>
+<link rel="icon" type="image/vnd.microsoft.icon" href="favicon.ico">
 <meta name="robots" content="index,nofollow" />
 <script type="text/javascript">
     var host;
