--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -627,7 +627,7 @@ WARNING: this page is completely useless without javascript support.<br />Please
 <table id="serverblock">
 <tr>
 <td><h2>Target server</h2></td>
-<td class="labelcell">Protocol:</td><td><select name="protocol" onchange="switchprotocol();"><!--onclick="switchssl(); switchauth(); swicthcainfo();">-->
+<td class="labelcell">Protocol:</td><td><select name="protocol"><!--onclick="switchssl(); switchauth(); swicthcainfo();">-->
 <option value="0" selected="selected">HTTP</option>
 <!--<option value="1">HTTP 1.1</option>-->
 <option value="2">HTTPS</option>
