--- a/debugger/visualeditor.html
+++ b/debugger/visualeditor.html
@@ -20,14 +20,13 @@
 
 // semicolon-separated list of types for the starting parameters
 // (hint: the number of shown parameters depends on this)
+var params = [];
 if (window.location.search.search(/params=/) != -1)
 {
-    var params = window.location.search.match(/params=([^&]*)/);
-    params = params[1].split(';');
-}
-else
-{
-    var params = [];
+    let param = window.location.search.match(/params=([^&]*)/);
+    if (param[1] != '') {
+        params = param[1].split(';');
+    }
 }
 
 // choose between json and xmlrpc
