improve base64 encoding of empty strings; docs; tag for release

--- a/debugger/debugger.html
+++ b/debugger/debugger.html
@@ -754,7 +754,7 @@ serving it, unless the remote server accepts CORS pre-flight requests.</li>
 
 <h3>Changelog</h3>
 <ul>
-<li>ver 0.6 - 2022/12/XX: removed unsupported handling of cookies; request/response compression; timeout</li>
+<li>ver 0.6 - 2022/12/17: removed unsupported handling of cookies; request/response compression; timeout</li>
 </ul>
 </div>
 </div>
