update for rel 0.6.1

--- a/index.html
+++ b/index.html
@@ -42,6 +42,11 @@ More info on the vulnerabilities can be found <a href="#security">at the bottom 
 <ul>
 
 <li>
+    19th of December, 2022<br/>
+    Version 0.6.1 of the library has been released<br/><br/>
+</li>
+
+<li>
     17th of December, 2022<br/>
     Version 0.6 of the library has been released<br/><br/>
 </li>
