--- a/index.html
+++ b/index.html
@@ -1,6 +1,5 @@
-<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
-    "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
-<html xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>XML-RPC for Javascript</title>
@@ -26,7 +25,7 @@ Above all, it mimics as closely as possible the API of the <a href="https://ggge
 </p>
 
 <h2><a name="download">Download</a></h2>
-Release 0.6  the library <a href="https://github.com/gggeek/jsxmlrpc/releases/tag/0.6.0">is available here</a>.<br/>
+Release 0.6.1  the library <a href="https://github.com/gggeek/jsxmlrpc/releases/tag/0.6.1">is available here</a>.<br/>
 It can also be downloaded as NodeJS package from <a href="https://www.npmjs.com/package/@jsxmlrpc/jsxmlrpc">https://www.npmjs.com/package/@jsxmlrpc/jsxmlrpc</a>.
 <!--
 <p>The latest stable release is version <a href="https://sourceforge.net/project/showfiles.php?group_id=34455&amp;package_id=26601&amp;release_id=443018"><span class="evidence">2.1</span></a> released on August 28, 2006</p>
@@ -127,7 +126,7 @@ For security related issues feel free to contact <a href="https://sourceforge.ne
 <a href="http://validator.w3.org/check?uri=http%3A%2F%2Fgggeek.github.com%2Fjsxmlrpc%2F"><img
         src="http://www.w3.org/Icons/valid-xhtml10" height="31" width="88"
         alt="Valid XHTML 1.0!" /></a><br/>
-Page last updated: 2022/12/17
+Page last updated: 2022/12/19
 
 </div>
 </body>
