update for rel. 0.6.2

--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@ More info on the vulnerabilities can be found <a href="#security">at the bottom 
 <ul>
 
 <li>
+    20th of December, 2022<br/>
+    Version 0.6.2 of the library has been released<br/><br/>
+</li>
+
+<li>
     19th of December, 2022<br/>
     Version 0.6.1 of the library has been released<br/><br/>
 </li>
